--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
     "start": "next start",
     "lint": "next lint"
   },
+	"browser": {
+		"fs": false,
+		"path": false,
+		"os": false
+	},
   "dependencies": {
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "next": "12.3.1",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "sass": "^1.55.0"
   },
   "devDependencies": {
