--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "sass": "^1.55.0",
