--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
 		"os": false
 	},
 	"dependencies": {
+		"@emotion/react": "^11.11.0",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.11.16",
+		"@mui/material": "^5.12.3",
 		"axios": "^1.4.0",
 		"fs": "^0.0.1-security",
 		"gray-matter": "^4.0.3",
